--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
         rel="stylesheet"
       />
     </noscript>
-    <script src="https://cdn.platform.linuxfoundation.org/lfx-header-v2.js"></script>
+    <script src="https://cdn.staging.platform.linuxfoundation.org/lfx-header-v2.js"></script>
     <script type="text/javascript">
       let segmentKey =
               '%VUE_APP_SEGMENT_KEY%'
